Fix z-index

--- a/src/app/modules/game/pages/game/game-views/tee-vote-view/tee-vote-view.component.scss
+++ b/src/app/modules/game/pages/game/game-views/tee-vote-view/tee-vote-view.component.scss
@@ -7,7 +7,7 @@
     right: 0;
     bottom: 0;
     background-color: rgba(0,0,0,0.5);
-    z-index: 1;
+    z-index: 10;
 }
 
 .wrapper {
@@ -62,6 +62,7 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: contain;
+    z-index: 20;
 
     &:hover {
         cursor: pointer;
